[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yarbo-robot-sdk"
version = "0.1.0"
description = "Python SDK for Yarbo robot devices"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "requests>=2.28",
    "paho-mqtt>=2.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "responses>=0.23",
]
